# neovide

./: .gitmodules  Cargo.toml
src/: editor.rs  main.rs  window.rs
