[package]
name = "neovide"
version = "0.1.0"
authors = ["keith <keith@the-simmons.net>"]
edition = "2018"

[dependencies]
font-kit = "0.4"
gl = "0.6"
glutin = "0.21"

derive-new = "0.5"
env_logger = "0.7.1"
neovim-lib = { git = "https://github.com/daa84/neovim-lib", version = "0.6" }
rmpv = "0.4.2"

[dependencies.pathfinder_canvas]
features = ["pf-text"]
path = "./pathfinder/canvas"

[dependencies.pathfinder_content]
path = "./pathfinder/content"

[dependencies.pathfinder_geometry]
path = "./pathfinder/geometry"

[dependencies.pathfinder_gl]
path = "./pathfinder/gl"

[dependencies.pathfinder_gpu]
path = "./pathfinder/gpu"

[dependencies.pathfinder_renderer]
path = "./pathfinder/renderer"

[profile.release]
debug = true
