[package]
name = "rust_druid_test"
version = "0.1.0"
authors = ["keith <keith@the-simmons.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5"
env_logger = "0.7.1"
neovim-lib = { git = "https://github.com/daa84/neovim-lib", version = "0.6" }
rmpv = "0.4.2"

[dependencies.render]
path="makepad/render"

[dependencies.widget]
path="makepad/widget"

[profile.release]
debug = true
